--- a/style.css
+++ b/style.css
@@ -37,7 +37,9 @@ input[type="text"] {
     height: 30px;
     border-radius: 5px;
     border: none;
-
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.599);
+    outline: none;
+    padding: 5px;
 }
 
 button {
@@ -50,6 +52,15 @@ button {
     width: 25px;
     padding: 5px;
     border: none;
+    cursor: pointer;
+    border-radius: 10px;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.599);
+}
+
+button:hover{
+    scale: 90%;
+    background-color: #ffffff ;
 }
 
 div {
